--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
     "@types/bootstrap": "^5.1.13",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-bootstrap": "^0.32.30",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "nivo": "^0.31.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
